# Information_Retrieval_VSM

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  SearchBar.cpp  config.json  main.cpp  main.py  package-lock.json  package.json  requirements.txt  setup.py  tailwind.config.js  vsm.cpp  vsm.h
api/: app.py
corpus/: Adobe.txt  Amazon.txt  Binance.txt  Dell.txt  Discord.txt  HP.txt  Lenovo.txt  Ola.txt  Uber.txt  apple.txt  blackberry.txt  flipkart.txt  huawei.txt  instagram.txt  levis.txt  messenger.txt  microsoft.txt  motorola.txt  nike.txt  nokia.txt  operating.txt  paypal.txt  puma.txt  reddit.txt  reliance.txt  samsung.txt  shakespeare.txt  skype.txt  sony.txt  spotify.txt  steam.txt  telegram.txt  volkswagen.txt  whatsapp.txt  youtube.txt
src/: vsm_basic.py
src/app/: globals.css  layout.tsx  page.tsx
src/components/: DirectorySelector.tsx  ErrorAlert.tsx  FloatingInput.tsx  FloatingSearch.tsx  Header.tsx  InfoPanel.tsx  InformationRetrievalApp.tsx  SearchBox.tsx  SearchResults.tsx
src/services/: api.ts
src/types/: search.ts
utils/: document_processor.py
vsm-ui-c++/: ApiManager.cpp  ApiManager.h  CMakeCache.txt  CMakeCache.txt.prev  CMakeLists.txt  CMakeLists.txt.user.0675fbf  CMakeSettings.json  CPackConfig.cmake  CPackSourceConfig.cmake  CorpusInputWidget.cpp  CorpusInputWidget.h  ErrorBanner.cpp  ErrorBanner.h  QueryInputWidget.cpp  QueryInputWidget.h  README.md  ResultsListWidget.cpp  ResultsListWidget.h  SearchBar.cpp  SearchBar.h  vsm.cpp  vsm.h  vsm.ui
